welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:18: error: not found: value Y
  for (i<- 0 to Y-1){
                ^